# my-django-admin

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: admin.py  models.py
app/migrations/: 0002_auto_20210615_2347.py  0003_auto_20210616_0003.py  0004_product.py  0005_auto_20210616_0024.py  0006_auto_20210616_0029.py
iniciando_com_django/: settings.py
