[tool.poetry]
name = "my-django-admin"
version = "0.1.0"
description = ""
authors = ["Crissky <pg2006pe@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.0.6"
psycopg2 = "2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
